# zuko

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: dummy.yml  lint.yml  test.yml
docs/tutorials/: basics.ipynb  vae.ipynb
tests/: test_distributions.py  test_nn.py
