[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
authors = [
  {name = "The Probabilists", email = "theprobabilists@gmail.com"}
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]
description = "Normalizing flows in PyTorch"
dynamic = ["dependencies", "version"]
keywords = [
  "torch",
  "normalizing flows",
  "probability",
  "distribution",
  "generative",
  "deep learning"
]
name = "zuko"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
  "python-lsp-ruff",
  "python-lsp-server[all]",
  "ruff"
]

[project.urls]
documentation = "https://zuko.readthedocs.io"
source = "https://github.com/probabilists/zuko"
tracker = "https://github.com/probabilists/zuko/issues"

[tool.ruff]
extend-include = ["*.ipynb"]
extend-select = ["I"]
line-length = 99

[tool.ruff.format]
exclude = ["*.ipynb"]
preview = true
quote-style = "preserve"

[tool.ruff.lint]
ignore = ["F403", "F405", "E731", "E741"]
ignore-init-module-imports = true

[tool.ruff.lint.isort]
lines-between-types = 1
no-sections = true
relative-imports-order = "closest-to-furthest"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
version = {attr = "zuko.__version__"}
